--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -537,8 +537,8 @@ key_bindings:
   # (Windows, Linux, and BSD only)
   #- { key: V,        mods: Control|Shift, action: Paste            }
   #- { key: C,        mods: Control|Shift, action: Copy             }
-  - { key: V, mods: Control,      action: Paste            }
-  - { key: C, mods: Control,      action: Copy             }
+#kwm  - { key: V, mods: Control,      action: Paste            }
+#kwm  - { key: C, mods: Control,      action: Copy             }
   #- { key: Insert,   mods: Shift,         action: PasteSelection   }
   #- { key: Key0,     mods: Control,       action: ResetFontSize    }
   #- { key: Equals,   mods: Control,       action: IncreaseFontSize }
